# rubric-lab

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  package.json  record_demo.sh
agents/research/: prompt.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/rubriclab/: database.py  judge.py  main.py  models.py  repository.py  rubric.py  runner.py  seed.py
apps/api/src/rubriclab/agent/: __init__.py  protocol.py
apps/api/src/rubriclab/agent/research/: __init__.py  tools.py
apps/api/src/rubriclab/agents/: research.py  research_agent.py  tools.py
apps/api/tests/: conftest.py  test_agent.py  test_agent_runner.py  test_judge.py  test_models.py  test_repository.py  test_runner.py
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
rubrics/: research-v1.yaml  research_agent.yaml
